# todo-app-rust

./: Cargo.toml
src/: main.rs
src/api/: mod.rs
src/api/controller/: mod.rs
src/api/controller/dto/: error.rs  mod.rs  sub_task_dto.rs  task_dto.rs
src/api/controller/tasks/: mod.rs
src/api/dbo/: task_dbo.rs
src/api/dto/: task_dto.rs
src/api/mapper/: mod.rs  sub_task_mapper.rs  task_mapper.rs
src/api/repository/: mod.rs  repository_tasks_mongo.rs
src/api/repository/dbo/: mod.rs  sub_task_dbo.rs  task_dbo.rs
src/api/services/: mod.rs
src/core/: mod.rs
src/core/mapper/: mod.rs
src/core/services/: repository.rs
src/models/error/: mod.rs
src/models/task/: mod.rs  sub_task.rs
