[package]
name = "todo-app-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket={version = "0.5.0-rc.1", features = ["json"]}
mongodb="2.1.0"
futures="0.3"
async-trait = "0.1.53"
serde = "1.0.130"
serde_json = "1.0"